Fix baseURL for GitHub Pages

--- a/en/index.html
+++ b/en/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>https://localhost:1313/</title>
-    <link rel="canonical" href="https://localhost:1313/">
+    <title>https://lalityaghadiyaram.github.io/Portfolio/</title>
+    <link rel="canonical" href="https://lalityaghadiyaram.github.io/Portfolio/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://localhost:1313/">
+    <meta http-equiv="refresh" content="0; url=https://lalityaghadiyaram.github.io/Portfolio/">
   </head>
 </html>
